@@ -1,5 +1,8 @@
 2010-06-03  Glenn Morris  <rgm@gnu.org>
 
+	* m/hp800.h (alloca) [__NetBSD__ && __GNUC__]: No need to define it,
+	now that AH_BOTTOM does it.
+
 	* m/hp800.h (HAVE_ALLOCA):
 	* m/ibms390x.h (HAVE_ALLOCA): Do not define, no longer needed.
 
